feat (integration) : fix cors, routing, & add fetch API
