# backend/internal/models/user.go
@@ -10,8 +10,7 @@ type User struct {
 	Email        string    `json:"email" gorm:"uniqueIndex;not null"`
 	PasswordHash string    `json:"-" gorm:"not null"`
 	Password     string    `json:"password" gorm:"not null"`
-	FirstName    string    `json:"first_name"`
-	LastName	 string	   `json:"last_name"`
+	FullName     string    `json:"full_name"`
 	CreatedAt    time.Time `json:"created_at"`
 	UpdatedAt    time.Time `json:"updated_at"`
 	IsActive     bool      `json:"is_active" gorm:"default:true"`
